Prevent overscroll on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ html {
   margin: 0;
   user-select: none;
   -webkit-user-select: none;
+  overscroll-behavior: none;
 
   font-family: 'Inter', sans-serif;
 }
